k8s/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kargo.9rum.cc/phase: dev
    labels:
        app: backend
        app.kubernetes.io/managed-by: kargocd
    name: backend
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: krmp-d2hub-idock.9rum.cc/dev-test/repo_bfe33105e387
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        kargo.9rum.cc/phase: dev
    labels:
        app.kubernetes.io/managed-by: kargocd
    name: backend-service
    namespace: default
spec:
    ports:
        - name: http
          port: 8080
          targetPort: 8080
    selector:
        app: backend
    type: LoadBalancer
