k8s/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mariadb
    namespace: default
    labels:
        app: mariadb
spec:
    serviceName: mariadb
    selector:
        matchLabels:
            app: mariadb
    template:
        metadata:
            labels:
                app: mariadb
        spec:
            containers:
                - name: mariadb
                  image: mariadb:10.6.12
                  volumeMounts:
                      - name: data
                        mountPath: /var/lib/mysql
                        subPath: mysql
                      # Using /docker-entrypoint-initdb.d/*.sql for Initializing a fresh instance
                      # (- ref : https://hub.docker.com/_/mariadb )
                      - name: mariadb-initdb
                        mountPath: /docker-entrypoint-initdb.d
                  resources:
                      limits:
                          memory: 1Gi
                  readinessProbe:
                      tcpSocket:
                          port: 3306
            volumes:
                - name: mariadb-initdb
                  configMap:
                      name: mariadb-initdb-config
    ## /docker-entrypoint-initdb.d is not working, When init data is remained in PV, PVC
    volumeClaimTemplates:
        - metadata:
              name: data
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
    name: mariadb
    namespace: default
    annotations:
        kargo.9rum.cc/phase: dev
    labels:
        app.kubernetes.io/managed-by: kargocd
spec:
    type: ClusterIP
    clusterIP: None
    selector:
        app: mariadb
    ports:
        - port: 3306
